k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: studyduo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: europe-west1-docker.pkg.dev/stackup-gemini/studyduo/backend:2.0
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: google-cloud-key
          mountPath: "/var/secrets/google"
          readOnly: true
      volumes:
      - name: google-cloud-key
        secret:
          secretName: gcp-sa-key
