k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: studyduo
spec:
  type: NodePort
  ports:
    - port: 80      # Exposed service port
      targetPort: 3000  # Must match the containerPort in the frontend Deployment
  selector:
    app: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: studyduo
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000  # Must match containerPort in backend Deployment
  selector:
    app: backend
