k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studyduo-ingress
  namespace: studyduo
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - studyduo.taphasolutions.com
    secretName: studyduo-tls
  rules:
  - host: studyduo.taphasolutions.com
    http:
      paths:
      - path: "/api/trpc"
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
      - path: "/api/revisions"
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
      - path: "/api/credits"
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
